# pdf-redactor

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
examples/: company.toml  patterns.txt  report.json
src/pdf_redactor/: cli.py  config.py  presets.py  protect.py  redactor.py  unlock.py
src/pdf_redactor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_config.py  test_presets.py  test_protect.py  test_redactor.py  test_unlock.py
